[gd_scene load_steps=25 format=3 uid="uid://drlgd1b3cem03"]

[ext_resource type="Script" path="res://scenes/coordinates_minigame/level_coordinates_minigame/scripts/LevelCoordinatesMinigame.gd" id="1_3xota"]
[ext_resource type="PackedScene" uid="uid://cy74drae0ss82" path="res://components/robot/Robot.tscn" id="3_goqxl"]
[ext_resource type="Script" path="res://scenes/fractions_minigame/level_fractions_minigame/scripts/ScoreLabel.gd" id="3_qyoai"]
[ext_resource type="PackedScene" uid="uid://chsa1ip830ajq" path="res://components/table/Table.tscn" id="3_tnj4g"]
[ext_resource type="PackedScene" uid="uid://b1konyslocvmf" path="res://components/clock/Clock.tscn" id="4_rjwd5"]
[ext_resource type="Texture2D" uid="uid://dulwas4a83juq" path="res://assets/graphical_assets/characters/player/door_scene_04.tga" id="4_xt2ru"]
[ext_resource type="PackedScene" uid="uid://ja2ux2ygrksu" path="res://components/pause/Pause.tscn" id="4_xtxav"]
[ext_resource type="Texture2D" uid="uid://bcheoudihgr1s" path="res://assets/graphical_assets/environments/backgrounds/coordinates_minigame/scene_04_frame.tga" id="5_onsio"]
[ext_resource type="Theme" uid="uid://bf2gebxg2263k" path="res://assets/graphical_assets/styles/points.tres" id="6_4l6hj"]
[ext_resource type="PackedScene" uid="uid://cv1ytr5mbabfm" path="res://components/score_screen/ScoreScreen.tscn" id="10_ix28s"]
[ext_resource type="Texture2D" uid="uid://cm1qbqgxj7c82" path="res://assets/graphical_assets/characters/player/main_character_scene_04.tga" id="13_tc6v6"]
[ext_resource type="Script" path="res://components/animated_texture_rect/AnimatedTextureRect.gd" id="14_07qk4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pmlm1"]
atlas = ExtResource("4_xt2ru")
region = Rect2(0, 400, 48, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_okl82"]
atlas = ExtResource("4_xt2ru")
region = Rect2(0, 0, 48, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iinsp"]
atlas = ExtResource("4_xt2ru")
region = Rect2(0, 80, 48, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e31nw"]
atlas = ExtResource("4_xt2ru")
region = Rect2(0, 160, 48, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiv6u"]
atlas = ExtResource("4_xt2ru")
region = Rect2(0, 240, 48, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1apg"]
atlas = ExtResource("4_xt2ru")
region = Rect2(0, 320, 48, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_jwl6i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okl82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iinsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e31nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiv6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1apg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmlm1")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5kdpe"]
atlas = ExtResource("13_tc6v6")
region = Rect2(0, 390, 80, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tvuc"]
atlas = ExtResource("13_tc6v6")
region = Rect2(0, 0, 80, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcxs0"]
atlas = ExtResource("13_tc6v6")
region = Rect2(0, 130, 80, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_tac63"]
atlas = ExtResource("13_tc6v6")
region = Rect2(0, 260, 80, 130)

[sub_resource type="SpriteFrames" id="SpriteFrames_7qhfs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tvuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcxs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tac63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kdpe")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="LevelCoordinatesMinigame" type="Node2D"]
script = ExtResource("1_3xota")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513726, 0.321569, 0.286275, 1)

[node name="AnimatedTextureRect2" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.875
anchor_top = 0.812
anchor_right = 0.938
anchor_bottom = 1.0
offset_left = -6.10352e-05
offset_top = 0.287964
offset_right = 0.487976
pivot_offset = Vector2(32.5, 54)
texture = SubResource("AtlasTexture_pmlm1")
script = ExtResource("14_07qk4")
sprites = SubResource("SpriteFrames_jwl6i")
frame_index = 5
auto_play = true

[node name="Table1" parent="CanvasLayer" instance=ExtResource("3_tnj4g")]
unique_name_in_owner = true
anchor_left = 0.179688
anchor_top = 0.111111
anchor_right = 0.384766
anchor_bottom = 0.378472
coordinates = Vector2i(-1, 1)

[node name="Table2" parent="CanvasLayer" instance=ExtResource("3_tnj4g")]
unique_name_in_owner = true
anchor_left = 0.179688
anchor_top = 0.444444
anchor_right = 0.384766
anchor_bottom = 0.711806
coordinates = Vector2i(-1, 0)

[node name="Table3" parent="CanvasLayer" instance=ExtResource("3_tnj4g")]
unique_name_in_owner = true
anchor_left = 0.179688
anchor_top = 0.763889
anchor_right = 0.384766
anchor_bottom = 1.03125
coordinates = Vector2i(-1, -1)

[node name="Table4" parent="CanvasLayer" instance=ExtResource("3_tnj4g")]
unique_name_in_owner = true
anchor_left = 0.398438
anchor_top = 0.111111
anchor_right = 0.603516
anchor_bottom = 0.378472
coordinates = Vector2i(0, 1)

[node name="Table5" parent="CanvasLayer" instance=ExtResource("3_tnj4g")]
unique_name_in_owner = true
anchor_left = 0.398438
anchor_top = 0.447917
anchor_right = 0.603516
anchor_bottom = 0.715278

[node name="Table6" parent="CanvasLayer" instance=ExtResource("3_tnj4g")]
unique_name_in_owner = true
anchor_left = 0.398438
anchor_top = 0.763889
anchor_right = 0.603516
anchor_bottom = 1.03125
coordinates = Vector2i(0, -1)

[node name="Table7" parent="CanvasLayer" instance=ExtResource("3_tnj4g")]
unique_name_in_owner = true
anchor_left = 0.621094
anchor_top = 0.111111
anchor_right = 0.826172
anchor_bottom = 0.378472
coordinates = Vector2i(1, 1)

[node name="Table8" parent="CanvasLayer" instance=ExtResource("3_tnj4g")]
unique_name_in_owner = true
anchor_left = 0.621094
anchor_top = 0.444444
anchor_right = 0.826172
anchor_bottom = 0.711806
coordinates = Vector2i(1, 0)

[node name="Table9" parent="CanvasLayer" instance=ExtResource("3_tnj4g")]
unique_name_in_owner = true
anchor_left = 0.621094
anchor_top = 0.763889
anchor_right = 0.826172
anchor_bottom = 1.03125
coordinates = Vector2i(1, -1)

[node name="AnimatedTextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.03125
anchor_top = 0.0694444
anchor_right = 0.155273
anchor_bottom = 0.324653
pivot_offset = Vector2(63.4998, 73.5001)
texture = SubResource("AtlasTexture_5kdpe")
stretch_mode = 5
script = ExtResource("14_07qk4")
sprites = SubResource("SpriteFrames_7qhfs")
frame_index = 3
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/AnimatedTextureRect"]

[node name="Label" type="Label" parent="CanvasLayer/AnimatedTextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0866145
anchor_top = 1.06122
anchor_right = 0.905515
anchor_bottom = 1.41496
metadata/_edit_use_anchors_ = true

[node name="Robot" parent="CanvasLayer" instance=ExtResource("3_goqxl")]
unique_name_in_owner = true
anchor_left = 0.875
anchor_top = 0.682
anchor_right = 0.938477
anchor_bottom = 0.793
offset_left = -6.10352e-05
offset_top = 0.168121
offset_bottom = 0.232117
expand_mode = 1

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_onsio")
region_rect = Rect2(0, 0, 80, 80)
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="ScorePanel" type="Panel" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(200, 50)
anchors_preset = -1
anchor_left = -0.000976563
anchor_top = -0.00173611
anchor_right = 0.194336
anchor_bottom = 0.0850694
size_flags_horizontal = 3
theme = ExtResource("6_4l6hj")
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer/ScorePanel"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_qyoai")

[node name="Clock" parent="CanvasLayer" instance=ExtResource("4_rjwd5")]
visible = false
anchor_left = 0.813477
anchor_right = 1.00098
offset_left = 0.0
offset_right = 0.0
countdown = true

[node name="ScoreScreen" parent="CanvasLayer" instance=ExtResource("10_ix28s")]
visible = false

[node name="Pause" parent="CanvasLayer" instance=ExtResource("4_xtxav")]
show_behind_parent = false
size_flags_horizontal = 4
size_flags_vertical = 6

[connection signal="countdown_finished" from="CanvasLayer/Clock" to="." method="_on_clock_countdown_finished"]
[connection signal="pivot_changed" from="CanvasLayer/Clock" to="." method="_on_clock_pivot_changed"]
[connection signal="restart_game" from="CanvasLayer/ScoreScreen" to="." method="_on_score_screen_restart_game"]
[connection signal="finished" from="CanvasLayer/Pause" to="." method="_on_pause_finished"]
